client/animal-shelter-website/src/app/footer/footer.component.css
*{
  box-sizing: border-box;
}

footer {
    
    background-color: #093f52;
    font-family: 'libre franklin';
    color: #ffffff;
    width: 1440px;
  
  }

  

  .footer .container  .row {

    display: flex;
    flex-wrap: wrap;  
    width: 1440px;
    align-items: flex-start;
    padding: 0.625rem;

  }

  .row {
    display: flex;
    flex-wrap: wrap;
    
}
/* 
  .footer .map, .footer .details, .footer .hours, .footer .links {
  
    /* padding: 10px; Optional: adds some spacing around each item 
  } */

  

  
  .phone-number {
    padding-top: 3rem;
    
  }
  

  
   .details  {
    display: flex;
    flex: wrap;
  }

  .map{
    width: fit-content;
  }

  .information{
    padding-left: 1rem;

  }
  

   .details  {
    display: flex;
    flex: wrap;
    width: fit-content;
    
  }



  .footer .hours .links{
    color: #C1CFD4;
  }


 
  .address{
    font-size: 1.25rem;
  }

  .phone-number, .Email {
    font-size: 0.75rem; /* Replace with the desired font size */
    
}

  

  .hours{
    display: flex;
    font-size: 0.75rem;
    padding-top: 0.3rem;

    /* flex: 1 1 auto; Flex grow, shrink, and basis set to auto */
    width: fit-content;
    line-height: 2;
    color: #C1CFD4;
    padding-left: 10px;
  }

  .hours ul{
    list-style-type: none;
    display: flex;
    flex-direction: column;
  
  }

  

  .links {
    display: flex;
    width: fit-content;
    font-size: 0.75rem;
    padding-top: 0.3rem;
    /* padding-right: 0.5rem; */
  }

  .links ul {
    list-style-type: none;
    margin-left: 1rem;
    line-height: 1rem;
    display: flex;
    flex-direction: column;
  }

  .links li {
    margin-bottom: 0.625rem;  
  }

  .links a {
    color: #C1CFD4;
    text-decoration: none;
  }

  
  .top {
    margin-top: 0.5rem;
    margin-left: 7rem;
    /* margin-right: 5rem ; */
    height: 2.5rem; 
    /* visual styling */
    text-decoration: none;
    float: right;
    padding:  0.525rem .925rem;
    font-family: sans-serif;
    color: #fff;
    background: #FAB41B;
    border-radius: 50%;
  }

